--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -120,7 +120,7 @@ footer {
   @inclide box-sizing;
 }
 
-/* sidevar */
+/* sidebar */
 
 aside {
   section {
@@ -148,6 +148,31 @@ aside {
 .gravatar {
   float: left;
   margin-right: 10px;
+}
+
+.stats {
+  overflow: auto;
+  a {
+    float: left;
+    padding: 0 10px;
+    border-left: 1px solid $grayLighter;
+    color: gray;
+    &:first-child {
+      padding-left: 0;
+      border: 0;
+    }
+  }
+  strong {
+    display: block;
+  }
+}
+
+.user_avatars {
+  overflow: auto;
+  margin-top: 10px;
+  .gravatar {
+    margin: 1px 1px;
+  }
 }
 
 /* forms */
@@ -198,7 +223,7 @@ input {
 .microposts {
   list-style: none;
   margin: 10px 0 0 0;
-  
+
   li {
     padding: 10px 0;
     border-top: 1px solid #e8e8e8;
@@ -223,4 +248,9 @@ aside {
     height: 100px;
     margin-bottom: 5px;
   }
+}
+
+.count_textarea {
+  float: right;
+  color: $grayLight;
 }
