--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -1,7 +1,8 @@
 <%= form_for(@micropost) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <div class="field">
-    <%= f.text_area :content, placeholder: "Compose new micropost..." %>
+    <%= f.text_area :content, class: "micropost_count", placeholder: "Compose new micropost..." %>
+    <span class="count_textarea"></span>
   </div>
   <%= f.submit "Post", class: "btn btn-large btn-primary" %>
 <% end %>
